--- a/cmake/OpenLibrary.cmake.in
+++ b/cmake/OpenLibrary.cmake.in
@@ -1,5 +1,5 @@
 
-set(OPENLIBRARY_INCLUDES  @HEADERS_INSTALL_PATH@)
+set(OPENLIBRARY_INCLUDES  @HEADERS_INSTALL_BASE_PATH@ @HEADERS_INSTALL_PATH@)
 set(OPENLIBRARY_LIBRARIES @LIB_DESTINATION@)
 
 if(OpenLibrary_FIND_COMPONENTS)
