--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
 
 #prepare target for running tests
 add_custom_target(test)                    #all internal test targets should attach here
+add_custom_target(valgrind_test)           #all valgrind tests should attach here
 
 #generate file with export/import stuff for sublibraries
 prepareExportFile(${CMAKE_SOURCE_DIR}/src/OpenLibraryExports.hpp)
