using separated XXX_EXPORTS macro for exporting particular library

--- a/src/QtExt/CMakeLists.txt
+++ b/src/QtExt/CMakeLists.txt
@@ -1,3 +1,4 @@
+
 set(LIB_NAME QtExt)
 
 project( ${LIB_NAME} )
@@ -5,7 +6,7 @@ cmake_minimum_required(VERSION 2.8)
 
 find_package(Qt4 4.6 REQUIRED QtGui QtCore REQUIRED)
 
-include_directories(${QT_INCLUDES} ${CMAKE_SOURCE_DIR}/src)
+include_directories(${CMAKE_CURRENT_BINARY_DIR} ${QT_INCLUDES} ${CMAKE_SOURCE_DIR}/src)
 
 set(LIB_SRC
   qtext_choosefile.cpp
