--- a/cmake/OpenLibrary.cmake.in
+++ b/cmake/OpenLibrary.cmake.in
@@ -1,6 +1,7 @@
 
 set(OPENLIBRARY_INCLUDES  @HEADERS_INSTALL_BASE_PATH@ @HEADERS_INSTALL_PATH@)
 set(OPENLIBRARY_LIBRARIES "")
+set(OPENLIBRARY_CMAKE_INCLUDES @OPENLIBRARY_CMAKE_DIR@/publicFunctions.cmake)
 
 if(OpenLibrary_FIND_COMPONENTS)
 
