htmlParser: providing link options for target

--- a/src/htmlParser/CMakeLists.txt
+++ b/src/htmlParser/CMakeLists.txt
@@ -35,10 +35,8 @@ add_flex_bison_dependency(cssFlex cssBison)
 
 register_library(htmlParser SOURCES ${HTMLPARSER_SRC} ${FLEX_htmlFlex_OUTPUTS} ${FLEX_cssFlex_OUTPUTS} ${BISON_htmlBison_OUTPUTS} ${BISON_cssBison_OUTPUTS}
                             HEADERS ${HTMLPARSER_HEADERS}
+                            LIBRARIES ${FLEX_LIBRARIES} common
                             TEST_SOURCES ${TEST_SRS})
-
-#link htmlParser staticaly with flex
-target_link_libraries(htmlParser ${FLEX_LIBRARIES} common)
 
 #enable debug info when building debug
 set_target_properties(htmlParser PROPERTIES COMPILE_DEFINITIONS_DEBUG YYDEBUG=1)
