htmlParser: fixing tests build

--- a/src/htmlParser/CMakeLists.txt
+++ b/src/htmlParser/CMakeLists.txt
@@ -41,8 +41,8 @@ register_library(htmlParser SOURCES ${HTMLPARSER_SRC} ${FLEX_htmlFlex_OUTPUTS} $
 #enable debug info when building debug
 set_target_properties(htmlParser PROPERTIES COMPILE_DEFINITIONS_DEBUG YYDEBUG=1)
 
-if(CPPUTEST_FOUND)
-    target_link_libraries(htmlParserTests ${FLEX_LIBRARIES} common)
+#temporary workaround. Definitions should be passed exactly to 'register_library'
+if(TARGET htmlParserTests)
     set_target_properties(htmlParserTests PROPERTIES COMPILE_DEFINITIONS_DEBUG YYDEBUG=1)
 endif(CPPUTEST_FOUND)
 
