fixing build problems

--- a/src/QtExt/CMakeLists.txt
+++ b/src/QtExt/CMakeLists.txt
@@ -6,7 +6,7 @@ cmake_minimum_required(VERSION 2.8)
 
 find_package(Qt4 4.6 REQUIRED QtGui QtCore REQUIRED)
 
-include_directories(${CMAKE_CURRENT_BINARY_DIR} ${QT_INCLUDES} ${CMAKE_SOURCE_DIR}/src)
+include_directories(${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${QT_INCLUDES} ${CMAKE_SOURCE_DIR}/src)
 
 set(LIB_SRC
   qtext_choosefile.cpp
