--- a/src/QtExt/CMakeLists.txt
+++ b/src/QtExt/CMakeLists.txt
@@ -4,9 +4,22 @@ set(LIB_NAME QtExt)
 project( ${LIB_NAME} )
 cmake_minimum_required(VERSION 2.8)
 
-find_package(Qt4 4.6 REQUIRED QtGui QtCore REQUIRED)
+find_package(Qt5Widgets)
 
-include_directories(${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${QT_INCLUDES} ${CMAKE_SOURCE_DIR}/src)
+if(Qt5Widgets_DIR)
+	set(Qt5 TRUE)
+else()
+	set(Qt5 FALSE)
+endif(Qt5Widgets_DIR)
+
+
+if(NOT Qt5)
+	find_package(Qt4 4.6 REQUIRED QtGui QtCore REQUIRED)
+
+	include_directories(${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${QT_INCLUDES} ${CMAKE_SOURCE_DIR}/src)
+else()
+	include_directories(${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_SOURCE_DIR}/src)
+endif(NOT Qt5)
 
 set(LIB_SRC
   qtext_choosefile.cpp
@@ -18,10 +31,18 @@ set(LIB_HEADERS
   qtext_progressbar.hpp
 )
 
-qt4_automoc(${LIB_SRC})
-qt4_wrap_cpp(LIB_MOCFILES ${LIB_HEADERS})
+if(NOT Qt5)
+	qt4_automoc(${LIB_SRC})
+	qt4_wrap_cpp(LIB_MOCFILES ${LIB_HEADERS})
+else()
+	qt5_wrap_cpp(LIB_MOCFILES ${LIB_HEADERS})
+endif()
 
 register_library(${LIB_NAME} SOURCES ${LIB_SRC} ${LIB_MOCFILES} HEADERS ${LIB_HEADERS})
 turnOnCpp11(${LIB_NAME})
 
-target_link_libraries(${LIB_NAME} ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY})
+if(Qt5)
+	qt5_use_modules(${LIB_NAME} Widgets)
+else()
+	target_link_libraries(${LIB_NAME} ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY})
+endif()
