palgorithm: cleanups with OpenMP

--- a/src/palgorithm/CMakeLists.txt
+++ b/src/palgorithm/CMakeLists.txt
@@ -5,6 +5,7 @@ project( ${LIB_NAME} )
 cmake_minimum_required(VERSION 2.8)
 
 find_package(Boost REQUIRED)
+find_package(openmp)
 
 include_directories(${CMAKE_SOURCE_DIR}/src ${Boost_INCLUDE_DIRS})
 
@@ -25,3 +26,8 @@ set(TEST_SRC
 include_directories(${CMAKE_SOURCE_DIR}/src)
 
 register_library(${LIB_NAME} SOURCES ${LIB_SOURCES} HEADERS ${LIB_HEADERS} TEST_SOURCES ${TEST_SRC})
+
+#test targets
+addSourceFlags(qsort.cpp COMPILE_FLAGS ${OpenMP_CXX_FLAGS})
+add_executable(qsort_tester qsort.cpp)
+addFlags(qsort_tester LINK_FLAGS ${OpenMP_CXX_FLAGS})
