palgorithm: bose-nelson: introducing generator

--- a/src/palgorithm/bose-nelson/CMakeLists.txt
+++ b/src/palgorithm/bose-nelson/CMakeLists.txt
@@ -2,11 +2,14 @@
 project( bose-nelson )
 cmake_minimum_required(VERSION 2.8)
 
-set(SRC
+set(SRC 
+    output_generator.cpp
     bose-nelson.cpp
+    main.cpp
     )
 
 set(HEADERS
+    output_generator.hpp
     bose-nelson.hpp
 )
 
