palgorithm: bose-nelson: adding generateSwapTables function to cmake lists

--- a/src/palgorithm/bose-nelson/CMakeLists.txt
+++ b/src/palgorithm/bose-nelson/CMakeLists.txt
@@ -15,3 +15,18 @@ set(HEADERS
 
 add_executable(bose-nelson ${SRC})
 turnOnCpp11(bose-nelson)
+
+function(generateSwapTables directory baseFileName cpp_file hpp_file)       #cpp_file and hpp_file will be returned
+    
+    set(_cpp_file ${directory}/${baseFileName}.cpp)
+    set(_hpp_file ${directory}/${baseFileName}.hpp)
+    
+    set(${cpp_file} ${_cpp_file} PARENT_SCOPE)
+    set(${hpp_file} ${_hpp_file} PARENT_SCOPE)
+    
+    set_source_files_properties(${_cpp_file} ${_hpp_file} PROPERTIES GENERATED TRUE)
+
+    add_custom_command(OUTPUT ${_cpp_file} ${_hpp_file}
+                       COMMAND bose-nelson ARGS ${_cpp_file} ${_hpp_file}
+                       DEPENDS ${SRC})
+endfunction(generateSwapTables)
