--- a/src/tools/gtest_runner/CMakeLists.txt
+++ b/src/tools/gtest_runner/CMakeLists.txt
@@ -11,11 +11,9 @@ elseif(WIN32)
     set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 endif(UNIX OR CYGWIN)
 
-find_package(GTest)
+find_package(GTest REQUIRED)
 
-if(GTEST_INCLUDE_DIRS)
-    include_directories(${GTEST_INCLUDE_DIRS})
-endif(GTEST_INCLUDE_DIRS)
+include_directories(${GTEST_INCLUDE_DIRS})
   
 if(WIN32)
 	set(RUNNER_SOURCES main_win.cpp)
@@ -23,12 +21,10 @@ else()
 	set(RUNNER_SOURCES main.cpp)
 endif(WIN32)
 
+set(RUNNER_SOURCES ${RUNNER_SOURCES} ${GTEST_SOURCES})
+
 add_executable(gtest_runner ${RUNNER_SOURCES})
 target_link_libraries(gtest_runner ${CMAKE_DL_LIBS})
-
-if(GTEST_LIBRARY)
-    target_link_libraries(gtest_runner ${GTEST_LIBRARY})
-endif(GTEST_LIBRARY)
 
 turnOnCpp11(gtest_runner)
 enableTestsAndCodeCoverage(gtest_runner)   #only link option, no sources. Without it, loaded library will not be instrumented
@@ -38,15 +34,11 @@ install(TARGETS gtest_runner RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/lib${LI
 
 #test lib
 set(TEST_SOURCES
+    ${GTEST_SOURCES}
     so_main.cpp
    )
 
 add_library(gtest_runner_test SHARED ${TEST_SOURCES})
-
-if(GTEST_LIBRARY)
-  target_link_libraries(gtest_runner_test ${GTEST_LIBRARY})
-endif(GTEST_LIBRARY)  
-  
 turnOnCpp11(gtest_runner_test)
 
 if(WIN32)
