gtest_runner: hidding symbols
there was a problem that gtest was in both: runner and library so there was a symbol conflict resulting a runtime crash

--- a/src/tools/gtest_runner/CMakeLists.txt
+++ b/src/tools/gtest_runner/CMakeLists.txt
@@ -25,6 +25,7 @@ set(RUNNER_SOURCES ${RUNNER_SOURCES} ${GTEST_SOURCES})
 
 add_executable(gtest_runner ${RUNNER_SOURCES})
 target_link_libraries(gtest_runner ${CMAKE_DL_LIBS} ${GTEST_LIBRARIES})
+hideSymbols(gtest_runner)
 
 turnOnCpp11(gtest_runner)
 enableTestsAndCodeCoverage(gtest_runner)   #only link option, no sources. Without it, loaded library will not be instrumented
