removing export-header related functions, using cmake's one

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,13 +2,14 @@
 project(library)
 cmake_minimum_required(VERSION 2.8)
 
-include( ${PROJECT_SOURCE_DIR}/cmake/functions.cmake )
+include(GenerateExportHeader)
+include(${PROJECT_SOURCE_DIR}/cmake/functions.cmake)
 set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
 
 #prepare target for running tests
 add_custom_target(test)                    #all internal test targets should attach here
 add_custom_target(valgrind_test)           #all valgrind tests should attach here
-add_custom_target(test_code_coverage       #all code coeverage tests should attach here
+add_custom_target(test_code_coverage       #all code coverage tests should attach here
                   DEPENDS test)
 
 add_library_path(src/htmlParser htmlParser)
@@ -21,7 +22,7 @@ add_library_path(src/palgorithm palgorithm)
 
 set(LIBRARY_HEADERS src/debug.hpp src/std_macros.hpp src/str_op.hpp)
 
-include_directories(${CMAKE_CURRENT_BINARY_DIR})
+include_directories(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_BINARY_DIR})
 register_library(common HEADERS ${LIBRARY_HEADERS} SOURCES src/str_op.cpp)
 
 getHeadersPath(HEADERS_INSTALL_PATH)
