--- a/src/QtExt/CMakeLists.txt
+++ b/src/QtExt/CMakeLists.txt
@@ -47,7 +47,8 @@ turnOnCpp11(${LIB_NAME})
 message("${LIB_NAME}: using Qt5: ${Qt5}")    
 
 if(Qt5)
-	qt5_use_modules(${LIB_NAME} Widgets)
+	qt5_use_modules(${LIB_NAME}_shared Widgets)
+	qt5_use_modules(${LIB_NAME}_static Widgets)
 else()
 	target_link_libraries(${LIB_NAME} ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY})
 endif()
