Revert "experiments with shared/static libraries"
This reverts commit 8c0e5c641b0af14a3b7fe71edf1c2e5b0a69c0f7.

--- a/src/QtExt/CMakeLists.txt
+++ b/src/QtExt/CMakeLists.txt
@@ -47,8 +47,7 @@ turnOnCpp11(${LIB_NAME})
 message("${LIB_NAME}: using Qt5: ${Qt5}")    
 
 if(Qt5)
-	qt5_use_modules(${LIB_NAME}_shared Widgets)
-	qt5_use_modules(${LIB_NAME}_static Widgets)
+	qt5_use_modules(${LIB_NAME} Widgets)
 else()
 	target_link_libraries(${LIB_NAME} ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY})
 endif()
