--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,12 @@
 
-project(library)
+project(openlibrary)
 cmake_minimum_required(VERSION 2.8)
+
+set(OPENLIBRARY_MAJOR_VERSION 1)
+set(OPENLIBRARY_MINOR_VERSION 1)
+set(OPENLIBRARY_PATCH_VERSION 0)
+set(OPENLIBRARY_VERSION
+  ${OPENLIBRARY_MAJOR_VERSION}.${OPENLIBRARY_MINOR_VERSION}.${OPENLIBRARY_PATCH_VERSION})
 
 #prepare paths
 if(WIN32 AND NOT CYGWIN)
