--- a/cmake/OpenLibraryConfig.cmake.in
+++ b/cmake/OpenLibraryConfig.cmake.in
@@ -1,17 +1,24 @@
 
 #http://www.cmake.org/Wiki/CMake/Tutorials/How_to_create_a_ProjectConfig.cmake_file
 
+# Compute paths
+get_filename_component(OPENLIBRARY_CMAKE_DIR "${CMAKE_CURRENT_LIST_FILE}" PATH)
+
 set(OPENLIBRARY_INCLUDES  @HEADERS_INSTALL_BASE_PATH@ @HEADERS_INSTALL_PATH@)
-set(OPENLIBRARY_CMAKE_INCLUDES @OPENLIBRARY_CMAKE_DIR@/publicFunctions.cmake)
+set(OPENLIBRARY_CMAKE_INCLUDES ${OPENLIBRARY_CMAKE_DIR}/publicFunctions.cmake)
 
 if(OpenLibrary_FIND_COMPONENTS)
 
     foreach(component ${OpenLibrary_FIND_COMPONENTS})
 
-        include(@OPENLIBRARY_CMAKE_DIR@/private/OpenLibrary_${component}Config.cmake)
+        if(NOT TARGET ${component})  #does target already exist?
 
-        string(TOUPPER ${component} COMPONENT)
-        set(OPENLIBRARY_${COMPONENT}_LIBRARIES ${component})
+            include(${OPENLIBRARY_CMAKE_DIR}/private/OpenLibrary_${component}Config.cmake)
+
+            string(TOUPPER ${component} COMPONENT)
+            set(OPENLIBRARY_${COMPONENT}_LIBRARIES ${component})
+
+        endif(NOT TARGET ${component})
 
     endforeach(component ${OpenLibrary_FIND_COMPONENTS})
 
