--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ set(OPENLIBRARY_MINOR_VERSION 1)
 set(OPENLIBRARY_PATCH_VERSION 0)
 set(OPENLIBRARY_VERSION
   ${OPENLIBRARY_MAJOR_VERSION}.${OPENLIBRARY_MINOR_VERSION}.${OPENLIBRARY_PATCH_VERSION})
+set(OPENLIBRARY_NAMESPACE OpenLibrary_)
 
 #prepare paths
 if(WIN32 AND NOT CYGWIN)
