cmake: Renaming OPENLIBRARY_CMAKE_INCLUDES to OPENLIBRARY_USE_FILE

--- a/cmake/OpenLibraryConfig.cmake.in
+++ b/cmake/OpenLibraryConfig.cmake.in
@@ -9,8 +9,8 @@ get_filename_component(OPENLIBRARY_CMAKE_DIR "${CMAKE_CURRENT_LIST_FILE}" PATH)
 
 set(OPENLIBRARY_INCLUDES  @HEADERS_INSTALL_BASE_PATH@ @HEADERS_INSTALL_PATH@)
 set(OPENLIBRARY_INCLUDE_DIRS ${OPENLIBRARY_INCLUDES})
-set(OPENLIBRARY_CMAKE_INCLUDES ${OPENLIBRARY_CMAKE_DIR}/publicFunctions.cmake)
 set(OPENLIBRARY_LIBRARIES "")
+set(OPENLIBRARY_USE_FILE ${OPENLIBRARY_CMAKE_DIR}/OpenLibraryUse.cmake)
 
 if(OpenLibrary_FIND_COMPONENTS)
 
